update jenkins file

--- a/roboshop-infra-dev/01-vpc/Jenkinsfile
+++ b/roboshop-infra-dev/01-vpc/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
         GREETING = 'Hello Jenkins practice'
     }
     options {
+            ansiColor('xterm')
         //timeout(time: 1, unit: 'HOURS') 
         //disableConcurrentBuilds()
     }
